--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <script>
       // ADD YOUR TROVE API KEY
       var troveAPIKey = "cg6sn8lpjp7o8q19";
-      var troveApiUrl="http://api.trove.nla.gov.au";
+      var troveApiUrl="https://api.trove.nla.gov.au";
       //var troveApiUrl="https://trove-proxy.herokuapp.com/api";
       var config = {};
       config.listSnippet = 50;
