--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Exhibition Name</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline"></h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis finibus libero in dui finibus, sit amet tincidunt nulla hendrerit. Aenean blandit fermentum nisl, quis sollicitudin neque lobortis non. Quisque vel condimentum tortor, in aliquam lacus. Morbi placerat egestas risus sit amet eleifend. Nam vitae risus maximus, tempus metus sed, tincidunt risus. Ut aliquet ligula a viverra efficitur. Nullam a eros tortor. Aliquam lacinia commodo turpis, nec tincidunt ligula condimentum eu. Nunc gravida auctor risus, ac scelerisque nisi tempus id. Nullam pulvinar ornare turpis, in fringilla massa cursus id. Cras egestas risus volutpat luctus auctor. Proin semper diam augue. Mauris ut ultrices enim, sit amet laoreet eros. Phasellus euismod, lectus vel dictum sodales, massa elit interdum orci, sed consectetur risus dolor. 
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod, sed consectetur risus dolor. 
     </div>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-highlights">
       EXHIBITION HIGHLIGHTS
@@ -71,9 +71,9 @@
     <ul ng-hide="listHide" class="ng-hide" id="lists">
 
       <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=109698">Free as a Bird</a></li>
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110461">'Til the Cows Come Home</a></li>
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110462">Eager Beaver</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=109698">List One</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110461">List Two</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110462">List Three</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108240">List Four</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108247">List Five</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108243">List Six</a></li>
