--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/index_ipad.css">
-    <link rel="stylesheet" href="css/index_huawei.css">
+    <!-- <link rel="stylesheet" href="css/index_huawei.css"> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
