--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
     <!-- Background Images -->
          
-            <div id="csa"><center><strong>Advice:</strong> Australian Aboriginal and Torres Strait Islander peoples are warned this exhibition may contain images of deceased peoples, and materials that may be considered culturally sensitive. </center></div>
+            <div id="csa"><center><strong>Advice:</strong> Australian Aboriginal and Torres Strait Islander communities are advised this exhibition may contain the names and images of deceased people. </center></div>
          
     <div ng-hide="listHide" class="ng-hide" id="background-image1" class="page-header">img/HS_1.jpg</div>
     <div ng-hide="listHide" class="ng-hide" id="background-image2" class="page-header">img/HS_2.jpg</div>
