--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   	<meta charset="utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-  	<title>{{ exhibition }}</title>
+  	<title>"Walkabout" contributors</title>
  	 <meta name="description" content="Trove Exhibition Application, powered by Trove">
   	<meta name="author" content="Trove">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -50,7 +50,7 @@
     <div ng-hide="listHide" class="ng-hide" id="highlights-caption7"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dapibus scelerisque eros, ut ultrices.</div>
 
     <!-- Exhibition details -->
-    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Exhibition Name</h1>
+    <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">"Walkabout" contributors</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline"></h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod, sed consectetur risus dolor. 
@@ -61,7 +61,7 @@
 
       <div ng-hide="listHide" class="ng-hide" id="exhibition-footer"> 
       <h1>Visit the Exhibition</h1>
-      <h2><a href="#">Exhibition Link Here</a></h2>
+      <h2><a href="#">"Walkabout" contributors</a></h2>
       <p>Location of exhibition</p>
 <p>Dates exhibition is available</p>
         
