--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <ul ng-hide="listHide" class="ng-hide" id="lists">
 
       <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=109698">List One</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130734">Eleanor Dark</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110461">List Two</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110462">List Three</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108240">List Four</a></li>
