--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130734">Eleanor Dark</a></li>
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110461">List Two</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130736">Ernestine Hill</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=110462">List Three</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108240">List Four</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108247">List Five</a></li>
