--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130734">Eleanor Dark</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130736">Ernestine Hill</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=131005">Robert Emerson Curtis</a></li>
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108240">List Four</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=131006">Max Dupain</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108247">List Five</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108243">List Six</a></li>
     </ul>
