--- a/index.html
+++ b/index.html
@@ -53,13 +53,9 @@
     <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">"Walkabout" contributors</h1>
     <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline"></h2>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
-       In January 1935, travelling anywhere in Australia, you might have picked up a copy of Walkabout: Australia’s Geographical Magazine, drawn by its distinctive red cover, and flicked through its pages. This new publication was the first Australian national travel promotion, and it soon became a firm favourite. Walkabout was the kind of magazine people read in train station waiting rooms, at the doctor’s surgery, or when they visited a government office.
+	    In January 1935, travelling anywhere in Australia, you might have picked up a copy of Walkabout: Australia’s Geographical Magazine, drawn by its distinctive red cover, and flicked through its pages. This new publication was the first Australian national travel promotion, and it soon became a firm favourite. Walkabout was the kind of magazine people read in train station waiting rooms, at the doctor’s surgery, or when they visited a government office.
 
-Walkabout sought to bring to city-based readers knowledge of the country beyond the suburbs. It wanted to promote Australia as an appealing place for potential immigrants and investors. But Walkabout was primarily a travel, natural history and geographic magazine, and it attracted the same kind of readers as the US National Geographic, with an Australian and Pacific focus.
-
-Walkabout’s high quality images were captured by leading photographers, such as Frank Hurley and Max Dupain, and later Rennie Ellis. Its informative and entertaining articles were produced by highly influential journalists and commentators. Travel writers such as Ernestine Hill and Frank Clune vividly described remote Australia and the Pacific. Innovative and sensitive anthropologists including Donald Thomson and Ursula McConnel wrote accessible accounts of their work with Aboriginal and Torres Strait Islander communities. Specialists such as the entomologist Tarlton Rayment pitched intriguing articles like “The Virgins of Halictus” (about bees) and Vincent Serventy wrote “Termites have Talent”.
-	    
-	    Anna Johnston
+Walkabout’s high quality images were captured by leading photographers, such as Frank Hurley and Max Dupain. Its informative and entertaining articles were produced by highly influential journalists and commentators. Travel writers such as Ernestine Hill and Frank Clune vividly described remote Australia and the Pacific. Innovative and sensitive anthropologists including Donald Thomson and Ursula McConnel wrote accessible accounts of their work with Aboriginal and Torres Strait Islander communities.
     </div>
     <div ng-hide="listHide" class="ng-hide" id="exhibition-highlights">
       EXHIBITION HIGHLIGHTS
