--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Walkabout’s high quality images were captured by leading photographers, such a
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130736">Ernestine Hill</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=131005">Robert Emerson Curtis</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=131006">Max Dupain</a></li>
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108247">List Five</a></li>
-        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=108243">List Six</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130567">Frank Clune</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=131288">Donald Thomson</a></li>
     </ul>
     <script>
       // ADD YOUR TROVE API KEY
