--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ Walkabout’s high quality images were captured by leading photographers, such a
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=130567">Frank Clune</a></li>
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=131288">Donald Thomson</a></li>
 	<li><a class="list-link" href="https://trove.nla.gov.au/list?id=132143">Beatrice Grimshaw</a></li>
+	<li><a class="list-link" href="https://trove.nla.gov.au/list?id=132671">Charles Barrett</a></li>
     </ul>
     <script>
       // ADD YOUR TROVE API KEY
